--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
-# Travis CI configuration file.
-# @link https://travis-ci.org/
-
-# For use with the Twenty Nineteen WordPress theme
-# @link https://github.com/WordPress/twentynineteen/
+# Travis CI configuration file for use with the QuotesIn WordPress theme
+# @link https://github.com/pratikkry/quotesin/
 
 # Declare project language and PHP versions to test against.
 # @link https://about.travis-ci.org/docs/user/languages/php/
@@ -12,95 +9,82 @@ language: php
 # https://blog.travis-ci.com/2017-07-11-trusty-as-default-linux-is-coming
 dist: trusty
 
-# Cache content for faster build process.
-# https://docs.travis-ci.com/user/caching/
-cache:
-  apt: true
-  directories:
-    # Cache directory for older Composer versions.
-    - $HOME/.composer/cache/files
-    # Cache directory for more recent Composer versions.
-    - $HOME/.cache/composer/files
-
-# PHP versions to build on
-php:
-  - 7.3
-  - 7.2
-  - 7.1
-  - 7.0
-  - 5.6
-  - 5.5
-  - 5.4
-
-# Declare which versions of WordPress to test against.
-# Also declare whether or not to test in Multisite.
-env:
-  global:
-    # Current version in development is 5.0.
-    # @link https://github.com/WordPress/WordPress
-    - WP_VERSION=5.0
-    - WP_MULTISITE=0
-    - LINT=1
-
 # Declare versions of PHP to use. Use one decimal max.
+# @link https://docs.travis-ci.com/user/build-configuration/
 matrix:
-  fast_finish: true
-  include:
-    - php: "5.3"
-      env: LINT=0
-      dist: precise
-    # Current minimum $required_php_version for WordPress: 5.2.4
-    - php: "5.2"
-      env: LINT=0
-      dist: precise
+    fast_finish: true
 
-# Ditch sudo and use containers.
-# @link https://docs.travis-ci.com/user/migrating-from-legacy/#Why-migrate-to-container-based-infrastructure%3F
-# @link https://docs.travis-ci.com/user/workers/container-based-infrastructure/#Routing-your-build-to-container-based-infrastructure
-sudo: false
+    include:
+        # Current $required_php_version for WordPress: 5.2.4
+        # aliased to 5.2.17
+        - php: '5.2'
+          dist: precise
+        # aliased to a recent 5.6.x version
+        - php: '5.6'
+          env: SNIFF=1
+        # aliased to a recent 7.0.x version
+        - php: '7.0'
+        # aliased to a recent 7.2.x version
+        - php: '7.2'
+        # bleeding edge PHP
+        - php: 'nightly'
 
-before_install:
-  # Speed up build time by disabling Xdebug.
-  # https://johnblackbourn.com/reducing-travis-ci-build-times-for-wordpress-projects/
-  # https://twitter.com/kelunik/status/954242454676475904
-  - phpenv config-rm xdebug.ini || echo 'No xdebug config.'
+    allow_failures:
+        - php: 'nightly'
+
+# Use this to prepare the system to install prerequisites or dependencies.
+# e.g. sudo apt-get update.
+# Failures in this section will result in build status 'errored'.
+# before_install:
 
 # Use this to prepare your build for testing.
 # e.g. copy database configurations, environment variables, etc.
 # Failures in this section will result in build status 'errored'.
 before_script:
-  - echo $WP_VERSION
-  - echo $WP_MULTISITE
-  # Set up WordPress installation.
-  - theme_slug=$(basename $(pwd))
-  - theme_dir=$(pwd)
-  - echo $theme_slug
-  - echo $theme_dir
-  # Install WPThemeReview stnadards, which will install PHP_CodeSniffer, WordPress Coding Standards, WPThemeReview and PHPCompatibility standards.
-  - if [[ "$LINT" == "1" ]]; then composer install --no-suggest; fi
-  # After CodeSniffer install you should refresh your path.
-  - phpenv rehash;
-  # Install JSHint, a JavaScript Code Quality Tool
-  # @link http://jshint.com/docs/
-  - if [[ "$LINT" == "1" ]]; then npm install -g jshint; fi
-  - if [[ "$LINT" == "1" ]]; then wget https://develop.svn.wordpress.org/trunk/.jshintrc; fi
-
+    # Speed up build time by disabling Xdebug.
+    - phpenv config-rm xdebug.ini || echo 'No xdebug config.'
+    # Set up temporary paths.
+    - export PHPCS_DIR=/tmp/phpcs
+    - export WPCS_DIR=/tmp/wpcs
+    - export PHPCOMPAT_DIR=/tmp/phpcompatibility
+    # Install CodeSniffer for WordPress Coding Standards checks.
+    - if [[ "$SNIFF" == "1" ]]; then git clone -b master --depth 1 https://github.com/squizlabs/PHP_CodeSniffer.git $PHPCS_DIR; fi
+    # Install WordPress Coding Standards.
+    - if [[ "$SNIFF" == "1" ]]; then git clone -b 0.14.1 --depth 1 https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards.git $WPCS_DIR; fi
+    # Install PHP Compatibility sniffs.
+    - if [[ "$SNIFF" == "1" ]]; then git clone -b master --depth 1 https://github.com/wimg/PHPCompatibility.git $PHPCOMPAT_DIR; fi
+    # Set install path for PHPCS sniffs.
+    # @link https://github.com/squizlabs/PHP_CodeSniffer/blob/4237c2fc98cc838730b76ee9cee316f99286a2a7/CodeSniffer.php#L1941
+    - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/bin/phpcs --config-set installed_paths $WPCS_DIR,$PHPCOMPAT_DIR; fi
+    # After CodeSniffer install you should refresh your path.
+    - if [[ "$SNIFF" == "1" ]]; then phpenv rehash; fi
+    # Install JSCS: JavaScript Code Style checker.
+    # @link http://jscs.info/
+    - if [[ "$SNIFF" == "1" ]]; then npm install -g jscs; fi
+    # Install JSHint, a JavaScript Code Quality Tool.
+    # @link http://jshint.com/docs/
+    - if [[ "$SNIFF" == "1" ]]; then npm install -g jshint; fi
+    # Pull in the WP Core jshint rules.
+    - if [[ "$SNIFF" == "1" ]]; then wget https://develop.svn.wordpress.org/trunk/.jshintrc; fi
 
 # Run test script commands.
 # Default is specific to project language.
 # All commands must exit with code 0 on success. Anything else is considered failure.
 script:
-  # Search theme for PHP syntax errors.
-  # The usage of bash + || exit 1 is to ensure xargs does not exit on first error.
-  - find . \( -name '*.php' \) -not -path "./vendor/*" | xargs -n1 bash -c 'php -lf $0 || exit 1'
-  # Run the theme through JSHint
-  - if [[ "$LINT" == "1" ]]; then jshint --exclude ./vendor .; fi
-  # WordPress Coding Standards
-  # @link https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards
-  # -p flag: Show progress of the run.
-  # -s flag: Show sniff codes in all reports.
-  # -v flag: Print verbose output.
-  # -n flag: Do not print warnings (shortcut for --warning-severity=0)
-  # --extensions: Only sniff PHP files.
-  - if [[ "$LINT" == "1" ]]; then composer lint . -- -p -s -v -n --extensions=php; fi
-	
+    # Search for PHP syntax errors.
+    - find -L . -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l
+    # Run the theme through JSHint.
+    - if [[ "$SNIFF" == "1" ]]; then jshint .; fi
+    # Run the theme through JavaScript Code Style checker.
+    - if [[ "$SNIFF" == "1" ]]; then jscs .; fi
+    # WordPress Coding Standards.
+    # @link https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards
+    # @link https://pear.php.net/package/PHP_CodeSniffer/
+    # Uses a custom ruleset based on WordPress. This ruleset is automatically
+    # picked up by PHPCS as it's named `phpcs.xml(.dist)`.
+    - if [[ "$SNIFF" == "1" ]]; then $PHPCS_DIR/bin/phpcs --runtime-set ignore_warnings_on_exit 1; fi
+
+# Receive notifications for build results.
+# @link https://docs.travis-ci.com/user/notifications/#Email-notifications
+notifications:
+    email: false
