--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,8 @@ matrix:
         - php: '7.0'
         # aliased to a recent 7.2.x version
         - php: '7.2'
+        # aliased to a recent 7.3.x version
+        - php: '7.3'
         # bleeding edge PHP
         - php: 'nightly'
 
