--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,6 @@
 
 *.git export-ignore
 *.gitattributes export-ignore
+.jshintignore export-ignore
 .travis.yml export-ignore
 phpcs.xml.dist export-ignore
