--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,26 @@
 # @link https://about.travis-ci.org/docs/user/languages/php/
 language: php
 
+# PHP versions to build on
+php:
+  - 7.3
+  - 7.2
+  - 7.1
+  - 7.0
+  - 5.6
+  - 5.5
+  - 5.4
+  - nightly
+
 # Newer versions like trusty don't have PHP 5.2 or 5.3
 # https://blog.travis-ci.com/2017-07-11-trusty-as-default-linux-is-coming
 dist: trusty
+
+# Declare which versions of WordPress to test against.
+# Also declare whether or not to test in Multisite.
+env:
+  global:
+    - SNIFF=1
 
 # Declare versions of PHP to use. Use one decimal max.
 # @link https://docs.travis-ci.com/user/build-configuration/
@@ -15,21 +32,14 @@ matrix:
     fast_finish: true
 
     include:
+        - php: '5.3'
+          env: SNIFF=0
+          dist: precise
         # Current $required_php_version for WordPress: 5.2.4
         # aliased to 5.2.17
         - php: '5.2'
           dist: precise
-        # aliased to a recent 5.6.x version
-        - php: '5.6'
-          env: SNIFF=1
-        # aliased to a recent 7.0.x version
-        - php: '7.0'
-        # aliased to a recent 7.2.x version
-        - php: '7.2'
-        # aliased to a recent 7.3.x version
-        - php: '7.3'
-        # bleeding edge PHP
-        - php: 'nightly'
+          env: SNIFF=0
 
     allow_failures:
         - php: 'nightly'
