--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 
 *.git export-ignore
 *.gitattributes export-ignore
+.editorconfig export-ignore
 .jshintignore export-ignore
 .travis.yml export-ignore
 phpcs.xml.dist export-ignore
